update and check